[package]
name = "idleproduction"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
bevy = "0.9.1"
